# aries-uniffi-wrappers

./: .gitignore  DEVELOP.md  Package.swift  README.md
.github/workflows/: anoncreds.yml  askar.yml  indy-vdr.yml
anoncreds/: Cargo.toml  build-swift-framework.sh  build.rs
anoncreds/src/: anoncreds_uniffi.udl
anoncreds/src/uffi/: error.rs  issuer.rs  mod.rs  prover.rs
askar/: Cargo.toml
askar/src/: askar.udl
askar/src/uffi/: error.rs  mod.rs  session.rs  store.rs
indy-vdr/: Cargo.toml
indy-vdr/src/: indy_vdr_uniffi.udl
indy-vdr/src/uffi/: error.rs  macros.rs  mod.rs  pool.rs
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/anoncreds/: build.gradle.kts  rust
kotlin/anoncreds/src/commonTest/kotlin/: TestAnoncreds.kt
kotlin/askar/: build.gradle.kts  rust
kotlin/askar/src/commonTest/kotlin/: TestAskar.kt
kotlin/gradle/: libs.versions.toml
kotlin/indy-vdr/: build.gradle.kts  rust
kotlin/indy-vdr/src/commonTest/kotlin/: TestVDR.kt
swift/Sources/Anoncreds/: anoncreds_uniffi.swift
