[package]
name = "indy-vdr-uniffi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi/uniffi-bindgen.rs"

[lib]
name = "indy_vdr_uniffi"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build", "cli", "tokio"] }


[dependencies]
env_logger = { version = "0.9" }
indy-vdr = { git = "https://github.com/indicio-tech/indy-vdr", rev = "cd5146f", features = ["logger", "libsodium"], default-features = false }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["sync"] }
uniffi = { version = "0.28.3", features = ["cli", "tokio"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 8
panic = "abort"